begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.protocol.commands
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|commands
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Strings
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|DatanodeDetails
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|SCMRegisteredResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|SCMRegisteredResponseProto
operator|.
name|ErrorCode
import|;
end_import

begin_comment
comment|/**  * Response to Datanode Register call.  */
end_comment

begin_class
DECL|class|RegisteredCommand
specifier|public
class|class
name|RegisteredCommand
block|{
DECL|field|clusterID
specifier|private
name|String
name|clusterID
decl_stmt|;
DECL|field|error
specifier|private
name|ErrorCode
name|error
decl_stmt|;
DECL|field|datanode
specifier|private
name|DatanodeDetails
name|datanode
decl_stmt|;
DECL|method|RegisteredCommand (final ErrorCode error, final DatanodeDetails node, final String clusterID)
specifier|public
name|RegisteredCommand
parameter_list|(
specifier|final
name|ErrorCode
name|error
parameter_list|,
specifier|final
name|DatanodeDetails
name|node
parameter_list|,
specifier|final
name|String
name|clusterID
parameter_list|)
block|{
name|this
operator|.
name|datanode
operator|=
name|node
expr_stmt|;
name|this
operator|.
name|clusterID
operator|=
name|clusterID
expr_stmt|;
name|this
operator|.
name|error
operator|=
name|error
expr_stmt|;
block|}
comment|/**    * Returns a new builder.    *    * @return - Builder    */
DECL|method|newBuilder ()
specifier|public
specifier|static
name|Builder
name|newBuilder
parameter_list|()
block|{
return|return
operator|new
name|Builder
argument_list|()
return|;
block|}
comment|/**    * Returns datanode.    *    * @return - Datanode.    */
DECL|method|getDatanode ()
specifier|public
name|DatanodeDetails
name|getDatanode
parameter_list|()
block|{
return|return
name|datanode
return|;
block|}
comment|/**    * Returns cluster ID.    *    * @return -- ClusterID    */
DECL|method|getClusterID ()
specifier|public
name|String
name|getClusterID
parameter_list|()
block|{
return|return
name|clusterID
return|;
block|}
comment|/**    * Returns ErrorCode.    *    * @return - ErrorCode    */
DECL|method|getError ()
specifier|public
name|ErrorCode
name|getError
parameter_list|()
block|{
return|return
name|error
return|;
block|}
comment|/**    * Gets the protobuf message of this object.    *    * @return A protobuf message.    */
DECL|method|getProtoBufMessage ()
specifier|public
name|SCMRegisteredResponseProto
name|getProtoBufMessage
parameter_list|()
block|{
name|SCMRegisteredResponseProto
operator|.
name|Builder
name|builder
init|=
name|SCMRegisteredResponseProto
operator|.
name|newBuilder
argument_list|()
comment|// TODO : Fix this later when we have multiple SCM support.
comment|// .setAddressList(addressList)
operator|.
name|setClusterID
argument_list|(
name|this
operator|.
name|clusterID
argument_list|)
operator|.
name|setDatanodeUUID
argument_list|(
name|this
operator|.
name|datanode
operator|.
name|getUuidString
argument_list|()
argument_list|)
operator|.
name|setErrorCode
argument_list|(
name|this
operator|.
name|error
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|datanode
operator|.
name|getHostName
argument_list|()
argument_list|)
condition|)
block|{
name|builder
operator|.
name|setHostname
argument_list|(
name|datanode
operator|.
name|getHostName
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
operator|!
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|datanode
operator|.
name|getIpAddress
argument_list|()
argument_list|)
condition|)
block|{
name|builder
operator|.
name|setIpAddress
argument_list|(
name|datanode
operator|.
name|getIpAddress
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
operator|!
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|datanode
operator|.
name|getNetworkName
argument_list|()
argument_list|)
condition|)
block|{
name|builder
operator|.
name|setNetworkName
argument_list|(
name|datanode
operator|.
name|getNetworkName
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
operator|!
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|datanode
operator|.
name|getNetworkLocation
argument_list|()
argument_list|)
condition|)
block|{
name|builder
operator|.
name|setNetworkLocation
argument_list|(
name|datanode
operator|.
name|getNetworkLocation
argument_list|()
argument_list|)
expr_stmt|;
block|}
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * A builder class to verify all values are sane.    */
DECL|class|Builder
specifier|public
specifier|static
class|class
name|Builder
block|{
DECL|field|datanode
specifier|private
name|DatanodeDetails
name|datanode
decl_stmt|;
DECL|field|clusterID
specifier|private
name|String
name|clusterID
decl_stmt|;
DECL|field|error
specifier|private
name|ErrorCode
name|error
decl_stmt|;
comment|/**      * sets datanode details.      *      * @param node - datanode details      * @return Builder      */
DECL|method|setDatanode (DatanodeDetails node)
specifier|public
name|Builder
name|setDatanode
parameter_list|(
name|DatanodeDetails
name|node
parameter_list|)
block|{
name|this
operator|.
name|datanode
operator|=
name|node
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Sets cluster ID.      *      * @param cluster - clusterID      * @return Builder      */
DECL|method|setClusterID (String cluster)
specifier|public
name|Builder
name|setClusterID
parameter_list|(
name|String
name|cluster
parameter_list|)
block|{
name|this
operator|.
name|clusterID
operator|=
name|cluster
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Sets Error code.      *      * @param errorCode - error code      * @return Builder      */
DECL|method|setErrorCode (ErrorCode errorCode)
specifier|public
name|Builder
name|setErrorCode
parameter_list|(
name|ErrorCode
name|errorCode
parameter_list|)
block|{
name|this
operator|.
name|error
operator|=
name|errorCode
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Build the command object.      *      * @return RegisteredCommand      */
DECL|method|build ()
specifier|public
name|RegisteredCommand
name|build
parameter_list|()
block|{
if|if
condition|(
operator|(
name|this
operator|.
name|error
operator|==
name|ErrorCode
operator|.
name|success
operator|)
operator|&&
operator|(
name|this
operator|.
name|datanode
operator|==
literal|null
operator|||
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|this
operator|.
name|datanode
operator|.
name|getUuidString
argument_list|()
argument_list|)
operator|||
name|Strings
operator|.
name|isNullOrEmpty
argument_list|(
name|this
operator|.
name|clusterID
argument_list|)
operator|)
condition|)
block|{
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"On success, RegisteredCommand "
operator|+
literal|"needs datanodeUUID and ClusterID."
argument_list|)
throw|;
block|}
return|return
operator|new
name|RegisteredCommand
argument_list|(
name|this
operator|.
name|error
argument_list|,
name|this
operator|.
name|datanode
argument_list|,
name|this
operator|.
name|clusterID
argument_list|)
return|;
block|}
block|}
block|}
end_class

end_unit

